<!--
  ~ /*
  ~  *    Copyright 2018. iota9star
  ~  *
  ~  *    Licensed under the Apache License, Version 2.0 (the "License");
  ~  *    you may not use this file except in compliance with the License.
  ~  *    You may obtain a copy of the License at
  ~  *
  ~  *        http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  *    Unless required by applicable law or agreed to in writing, software
  ~  *    distributed under the License is distributed on an "AS IS" BASIS,
  ~  *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  *    See the License for the specific language governing permissions and
  ~  *    limitations under the License.
  ~  */
  -->

<resources>
    <string name="app_name">爱恋</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ignore_view">:aesthetic_ignore</string>

    <string name="menu_play">连载</string>
    <string name="menu_fans">片库</string>
    <string name="menu_tags">标签</string>
    <string name="menu_rss">订阅</string>
    <string name="menu_history">完结</string>
    <string name="menu_member">组织</string>
    <string name="menu_favorite">收藏</string>
    <string name="menu_more">更多</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>
    <string name="menu_new">最新</string>
    <string name="menu_anime">动画</string>
    <string name="menu_comic">漫画</string>
    <string name="menu_music">音乐</string>
    <string name="menu_around">周边</string>
    <string name="menu_other">其它</string>
    <string name="menu_raw">RAW</string>
    <string name="menu_ova">OVA</string>
    <string name="menu_collection">合集</string>
    <string name="menu_discuss">讨论</string>
    <string name="menu_pan">网盘</string>
    <string name="menu_search">搜索</string>

    <string name="settings_security_main">安全</string>
    <string name="settings_security_pin">数字锁</string>
    <string name="settings_security_fingerprint">指纹支持</string>
    <string name="settings_theme_nightly">夜间模式</string>
    <string name="settings_theme_color_tint_toolbar">标题栏随主题变色</string>
    <string name="settings_theme_custom_color">自定义主题色</string>
    <string name="settings_theme_personal">个性化</string>
    <string name="settings_theme_dynamic_background">动态背景</string>

    <string name="lock_input_pin">请输入PIN</string>
    <string name="lock_cancel">取消</string>
    <string name="lock_continue">继续</string>
    <string name="lock_wait_input">等待输入</string>
    <string name="lock_reinput">重新输入</string>
    <string name="lock_finish">完成</string>

    <string name="kisssub">KISSSUB.ORG</string>
    <string name="please_choose_photo">请选择图片</string>
    <string name="ok">确认</string>
    <string name="clear_selected_photos">清空选中图片</string>
    <string name="refresh_photos">刷新图库</string>
    <string name="all_rights_reserved">All rights reserved</string>
    <string name="dynamic_banner">http://r.photo.store.qq.com/psb?/V12tx9ch3NyzR3/r4uZknity6GZmHi5wQSGxlwypQ4JC4k3Q4GPMvFKvY0!/r/dG0BAAAAAAAA</string>
    <string name="content_banner">http://r.photo.store.qq.com/psb?/V12tx9ch3NyzR3/r4uZknity6GZmHi5wQSGxlwypQ4JC4k3Q4GPMvFKvY0!/r/dG0BAAAAAAAA</string>
    <string name="thanks">>> 感谢爱恋BT及其所有发布组\n>> 感谢本应用中所使用开源库的作者\n再次感谢所有对此作出贡献的大家（90°鞠躬）</string>
    <string name="filter">过滤</string>
    <string name="please_input_rss_tag">请输入订阅关键字</string>
    <string name="add_rss_tag">添加订阅</string>
    <string name="please_input_right_path">请输入正确的路径 - 网址、文件路径等</string>


    <string name="details_tags">标签</string>
    <string name="details_list">清单</string>
    <string name="details_download">下载</string>
    <string name="details_magnet">磁链下载</string>
    <string name="details_torrent">种子下载</string>
    <string name="details_share_link">分享链接</string>
    <string name="details_details">详情</string>

    <string name="about_source">来源</string>
    <string name="about_kisssub">爱恋BT</string>
    <string name="about_kisssub_url">https://kisssub.org/</string>
    <string name="about_thanks">感谢</string>
    <string name="about_is_good">觉得不错</string>
    <string name="about_grade_me">给我评分</string>
    <string name="about_version">版本</string>
    <string name="about_check_update">检查更新</string>

    <string name="action_collection">收藏</string>
    <string name="action_share">分享</string>
    <string name="action_download">下载</string>
    <string name="action_default">默认</string>
    <string name="action_local">本地</string>
    <string name="action_preview">预览</string>
    <string name="action_setting">设置</string>

    <string name="settings_theme_color_custom">自定义</string>
    <string name="settings_theme_color_primary_color">主颜色</string>
    <string name="settings_theme_color_accent_color">强调色</string>
    <string name="settings_theme_color_primary_text_color">主文本颜色</string>
    <string name="settings_theme_color_primary_text_color_dark">主文本颜色 - 夜间</string>
    <string name="settings_theme_color_secondary_text_color">次文本颜色</string>
    <string name="settings_theme_color_secondary_text_color_dark">次文本颜色 - 夜间</string>
    <string name="settings_theme_color_default">默认 - 快速设置主颜色</string>
    <string name="settings_content_background_mask_alpha">遮罩透明度</string>
    <string name="settings_content_background_mask_color">遮罩颜色</string>
    <string name="settings_content_background_demo">演示</string>
    <string name="settings_content_background_settings">设置</string>
    <string name="settings_content_background_mask_color_dark">遮罩颜色 - 夜间</string>
    <string name="settings_theme_content_background">内容背景</string>
    <string name="settings_more">更多</string>
    <string name="settings_accept_official_dynamic_background">接受推送的动态壁纸</string>
    <string name="settings_accept_official_content_background">接受推送的内容壁纸</string>
    <string name="settings_theme_color_base">基础</string>
    <string name="remove_photo_from_preview">从预览移除当前图片</string>
    <string name="action_done">确认</string>
    <string name="action_cancel">取消</string>
    <string name="action_back">返回</string>
    <string name="action_custom">定制</string>
    <string name="label_color_dialog">颜料板</string>
    <string name="label_color_choose">请选择颜色</string>
    <string name="action_preset">预设</string>
    <string name="action_activate_god_mode">ヽ(爱´∀‘爱)ノ激活上帝模式</string>
    <string name="label_god_mode_hit">( *・ω・)✄·神·秘·代·码·( *・ω・)✄·</string>
    <string name="label_god_mode">上帝模式</string>
    <string name="settings_advance">高级</string>
    <string name="label_wait_please">请稍等</string>
    <string name="label_wait_for_find_photo">正在寻找图片，请耐心等待…</string>
    <string name="settings_theme_color_status_bar">状态栏</string>
    <string name="settings_theme_color_status_bar_depth">颜色深度</string>

</resources>
