<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *    Copyright 2018. iota9star
  ~  *
  ~  *    Licensed under the Apache License, Version 2.0 (the "License");
  ~  *    you may not use this file except in compliance with the License.
  ~  *    You may obtain a copy of the License at
  ~  *
  ~  *        http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  *    Unless required by applicable law or agreed to in writing, software
  ~  *    distributed under the License is distributed on an "AS IS" BASIS,
  ~  *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  *    See the License for the specific language governing permissions and
  ~  *    limitations under the License.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_new"
            android:icon="@drawable/ic_menu_new"
            android:title="@string/menu_new" />
        <item
            android:id="@+id/menu_anime"
            android:icon="@drawable/ic_menu_anime"
            android:title="@string/menu_anime" />
        <item
            android:id="@+id/menu_comic"
            android:icon="@drawable/ic_menu_comic"
            android:title="@string/menu_comic" />
        <item
            android:id="@+id/menu_music"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/menu_around"
            android:icon="@drawable/ic_menu_around"
            android:title="@string/menu_around" />
        <item
            android:id="@+id/menu_other"
            android:icon="@drawable/ic_menu_other"
            android:title="@string/menu_other" />
        <item
            android:id="@+id/menu_collection"
            android:icon="@drawable/ic_menu_collections"
            android:title="@string/menu_collection" />
        <item
            android:id="@+id/menu_ova"
            android:icon="@drawable/ic_menu_ova"
            android:title="@string/menu_ova" />
        <item
            android:id="@+id/menu_raw"
            android:icon="@drawable/ic_menu_raw"
            android:title="@string/menu_raw" />
        <item
            android:id="@+id/menu_discuss"
            android:icon="@drawable/ic_menu_discuss"
            android:title="@string/menu_discuss" />
        <item
            android:id="@+id/menu_pan"
            android:icon="@drawable/ic_menu_pan"
            android:title="@string/menu_pan" />


    </group>
</menu>
