<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *    Copyright 2017. iota9star
  ~  *
  ~  *    Licensed under the Apache License, Version 2.0 (the "License");
  ~  *    you may not use this file except in compliance with the License.
  ~  *    You may obtain a copy of the License at
  ~  *
  ~  *        http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  *    Unless required by applicable law or agreed to in writing, software
  ~  *    distributed under the License is distributed on an "AS IS" BASIS,
  ~  *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  *    See the License for the specific language governing permissions and
  ~  *    limitations under the License.
  ~  */
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewContentBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/viewMask"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="24dp"
                android:text="@string/settings_security_main"
                android:textColor="?colorAccent"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayoutPinLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/settings_security_pin"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_pin"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutFingerprintLock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/settings_security_fingerprint"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_fingerprint"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:text="@string/settings_theme_personal"
                android:textColor="?colorAccent"
                android:textStyle="bold" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchCompatNightly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:text="@string/settings_theme_nightly"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayoutThemeColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/settings_theme_custom_color"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageViewPoint"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_item_theme_checked"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewDynamicBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:text="@string/settings_theme_dynamic_background"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewContentBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="12dp"
                android:text="@string/settings_theme_content_background"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>